examples/neg/issue373/handler_correct_annotation.effekt
interface Eff[A] {
  def op(x: A): A
}

def main() =
  try { println(eff.op[Int]("hello")) }
  with eff: Eff[Int] { def op(x) = resume(x / 1) }